<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Info103">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_title103"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/course_103"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/closeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:contentDescription="Close Button"
            android:padding="10dp"
            app:srcCompat="@android:drawable/btn_dialog" />

    </LinearLayout>

    <TextView
        android:id="@+id/txt_credit103"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/credits3"
        android:textSize="15sp" />

    <RadioGroup
        android:id="@+id/radioGroup_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioBtn_taken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:text="@string/title_taken"
            android:onClick="typeClicked"/>

        <RadioButton
            android:id="@+id/radioBtn_inProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/header_inProgress"
            android:onClick="typeClicked"/>

        <RadioButton
            android:id="@+id/radioBtn_untaken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="typeClicked"
            android:text="@string/header_untaken" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        android:padding="25dp">

        <TextView
            android:id="@+id/txt_termInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:gravity="center|center_horizontal"
            android:text="@string/termInput"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="90dp"
            android:layout_marginRight="90dp"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="Term (e.g. Fall 2019)"
            android:inputType="datetime|text"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="25dp">

        <TextView
            android:id="@+id/txt_gradeInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginLeft="25dp"
            android:gravity="center|center_horizontal"
            android:text="@string/gradeInput"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/input_grade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_weight="1"
            android:ems="10"
            android:enabled="false"
            android:hint="Grade (e.g. B-)"
            android:inputType="text"
            android:maxLength="2"
            android:textSize="15sp" />
    </LinearLayout>

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:padding="20dp"
        android:text="Save" />

</LinearLayout>