<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_inProgress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/header_inProgress"
        android:textColor="@android:color/background_light"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/text_untaken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_dark"
        android:paddingLeft="25dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/header_untaken"
        android:textColor="@android:color/background_light"
        android:textSize="25sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/course_103"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="auto"
        android:padding="10dp"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp">

        <TextView
            android:id="@+id/txt_course103"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:padding="10dp"
            android:text="@string/course_103"
            android:textAlignment="center"
        android:textSize="15sp" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/course_104"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="auto"
        android:padding="10dp"
        app:cardBackgroundColor="@android:color/holo_orange_light"
        app:cardCornerRadius="20dp"
        app:contentPadding="10dp">

        <TextView
            android:id="@+id/txt_course104"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="false"
            android:padding="10dp"
            android:text="@string/course_104"
            android:textAlignment="center"
            android:textSize="15sp" />
    </androidx.cardview.widget.CardView>
</LinearLayout>
